test/deca/syntax/invalid/ifthenelse_elseif_incomplet_1.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (manque crochet fermant après else if)

{
    if (true) {
    
    } else if (false) {

}